--- a/src/components/index.astro
+++ b/src/components/index.astro
@@ -13,4 +13,7 @@ export { default as BackgroundGrid } from './elements/BackgroundGrid/index.astro
 
 // ui
 export { default as Nav } from './ui/Nav.astro';
+
+// sections
+export { default as SectionHero } from './sections/Hero.astro';
 ---
