--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -5,7 +5,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<footer class='sticky top-[100%]'>
+<footer class='sticky bottom-0 z-0'>
   <div class='bg-primary-400 dark:bg-primary-300 rounded-t-main py-14 px-14'>
     <div class='container mx-auto'>
       <div class='grid md:grid-cols-12 gap-6'>
