--- a/src/components/index.astro
+++ b/src/components/index.astro
@@ -1,19 +1,4 @@
 ---
-
 // core
-export { default as Typography } from './core/Typography/index.astro';
-
-// shared
-export { default as Header } from './shared/Header.astro';
-export { default as Footer } from './shared/Footer.astro';
-
-// elements
-export { default as Logo } from './elements/Logo.astro';
-export { default as BackgroundGrid } from './elements/BackgroundGrid/index.astro';
-
-// ui
-export { default as Nav } from './ui/Nav.astro';
-
-// sections
-export { default as SectionHero } from './sections/Hero.astro';
+export * from './core/index.astro';
 ---
