--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,13 +1,14 @@
 ---
 
 import { getLangFromUrl, useTranslations } from '@/i18n/utils';
+import { BackgroundGrid } from '../index.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 
 ---
 
-<section class='flex items-center justify-center px-5 py-40'>
+<section class='flex items-center justify-center px-5 py-40 bg-dark relative z-10'>
   <div class='container'>
     <div class='grid items-center grid-cols-12'>
       <div class='relative z-10 col-span-8'>
@@ -31,4 +32,5 @@ const t = useTranslations(lang);
       </div>
     </div>
   </div>
+  <BackgroundGrid />
 </section>
