--- a/src/components/shared/Header.astro
+++ b/src/components/shared/Header.astro
@@ -1,7 +1,8 @@
 ---
-import { getLangFromUrl, useTranslatedPath } from "@/i18n/utils";
-import { Logo, Nav } from "@/components/index.astro";
+import { getLangFromUrl, useTranslatedPath } from '@/i18n/utils';
 
+import { Logo } from '@/components/index.astro';
+import { Nav } from '@/components/ui/index.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const translatePath = useTranslatedPath(lang);
@@ -11,7 +12,7 @@ const translatePath = useTranslatedPath(lang);
   <div
     class='container flex items-center justify-between gap-4 p-3 px-8 m-auto transition rounded-main backdrop-blur-md bg-white/60 dark:bg-dark/60'
   >
-    <a href={translatePath('/')} class='text-white' title="Arsi Logo">
+    <a href={translatePath('/')} class='text-white' title='Arsi Logo'>
       <Logo />
     </a>
     <div class='flex items-center gap-8 ml-auto'>
