--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,6 @@
 ---
-// import { BackgroundGrid } from '@components';
-import { BackgroundGrid } from '@/components/index.astro';
 import { getLangFromUrl } from '../i18n/utils';
 import '@fontsource-variable/syne';
-
-// import { ThemeProvider } from '@material-tailwind/react';
-
-// import { currentScheme } from 'store/schemeStore';
 
 interface Props {
   title: string;
@@ -14,12 +8,10 @@ interface Props {
 
 const { title } = Astro.props;
 const lang = getLangFromUrl(Astro.url);
-
-// const isDark = currentScheme.get() === 'dark';
 ---
 
 <!doctype html>
-<html lang={lang}>
+<html lang={lang} class='scroll-smooth'>
   <head>
     <meta charset='UTF-8' />
     <meta name='description' content='Astro description' />
@@ -29,13 +21,9 @@ const lang = getLangFromUrl(Astro.url);
     <title>{title}</title>
   </head>
 
-  <!-- <ThemeProvider> -->
-    <body class="bg-white dark:bg-dark">
-      <slot />
-      <BackgroundGrid />
-      <!-- <BackgroundGrid /> -->
-    </body>
-  <!-- </ThemeProvider> -->
+  <body class='bg-white dark:bg-dark'>
+    <slot />
+  </body>
   <style is:global>
     body {
       scrollbar-gutter: stable both-edges;
@@ -44,22 +32,3 @@ const lang = getLangFromUrl(Astro.url);
     }
   </style>
 </html>
-
-<!-- <script is:inline>
-  const theme = (() => {
-    if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
-      return localStorage.getItem('theme');
-    }
-    if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-      return 'dark';
-    }
-    return 'light';
-  })();
-
-  if (theme === 'light') {
-    document.body.classList.remove('bg-dark');
-  } else {
-    document.body.classList.add('bg-dark');
-  }
-  window.localStorage.setItem('theme', theme);
-</script> -->
