add stack section

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -11,7 +11,7 @@ const t = useTranslations(lang);
 <section class='flex items-center justify-center px-5 py-40 bg-dark relative z-10'>
   <div class='container'>
     <div class='grid items-center grid-cols-12'>
-      <div class='relative z-10 col-span-8'>
+      <div class='hero-info relative z-10 col-span-8'>
         <h1 class='mb-2'>
           <div class='inline-flex p-2 mb-2 text-5xl font-bold bg-secondary-300 text-dark font-Syne'>
             {t('hero.greeting')}
@@ -21,13 +21,15 @@ const t = useTranslations(lang);
         <h2 class='text-6xl font-bold font-Syne text-primary-300'>{t('hero.job')}</h2>
       </div>
       <div class='col-span-4'>
-        <div class='flex justify-end w-96 h-96 animate-avatar bg-secondary-300 overflow-clip'>
-          <img
-            src='https://png2.cleanpng.com/sh/f21bae3b67cef14517431a7a77c5f35d/L0KzQYm3VMIzN6Jsj5H0aYP2gLBuTfNwdJYyiAJ7b4X2dX7xlfdpbZJpRdx4bnX2PcPwlvVzbJJxfZ9qcnPreba0gf5lepZ8RdHxLUXkdLW8UMJiO5U2TNUALkm8RIiBUcc1OWY3TKYAM0S0SIO8UMIveJ9s/kisspng-cole-sprouse-jughead-jones-riverdale-archie-andrew-oh-5add502a3d14c5.9947817415244534182502.png'
-            class='block object-cover object-top w-full h-full'
-            alt='Israel Larrondo'
-            loading='lazy'
-          />
+        <div class="avatar">
+          <div class='flex justify-end w-96 h-96 animate-avatar bg-secondary-300 overflow-clip'>
+            <img
+              src='https://png2.cleanpng.com/sh/f21bae3b67cef14517431a7a77c5f35d/L0KzQYm3VMIzN6Jsj5H0aYP2gLBuTfNwdJYyiAJ7b4X2dX7xlfdpbZJpRdx4bnX2PcPwlvVzbJJxfZ9qcnPreba0gf5lepZ8RdHxLUXkdLW8UMJiO5U2TNUALkm8RIiBUcc1OWY3TKYAM0S0SIO8UMIveJ9s/kisspng-cole-sprouse-jughead-jones-riverdale-archie-andrew-oh-5add502a3d14c5.9947817415244534182502.png'
+              class='block object-cover object-top w-full h-full'
+              alt='Israel Larrondo'
+              loading='lazy'
+            />
+          </div>
         </div>
       </div>
     </div>
