--- a/src/components/core/index.astro
+++ b/src/components/core/index.astro
@@ -2,4 +2,5 @@
 export { default as Typography } from './Typography/index.astro';
 export { default as BackgroundGrid } from './BackgroundGrid/index.astro';
 export { default as Logo } from './Logo.astro';
+export { default as Marquee } from './Marquee.astro';
 ---
