--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -11,7 +11,9 @@ const t = useTranslations(lang);
 const { jobs }: { jobs: string[] } = DATA_EXPERIENCE[lang] || [];
 ---
 
-<section class='flex items-center justify-center px-5 py-14 md:py-40 bg-white dark:bg-dark relative z-10'>
+<section
+  class='flex items-center justify-center px-5 py-14 md:py-40 bg-white dark:bg-dark relative z-10'
+>
   <div class='container'>
     <Typography
       type='h3'
