--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { SectionHero, SectionExperience } from '@/components/sections/index.astro';
+import { SectionHero, SectionExperience, SectionStack } from '@/components/sections/index.astro';
 import { Header, Footer } from '@/components/shared/index.astro';
 import { getLangFromUrl } from '@/i18n/utils';
 import Layout from '@/layouts/Layout.astro';
@@ -11,5 +11,6 @@ const lang = getLangFromUrl(Astro.url);
   <Header lang={lang} />
   <SectionHero lang={lang} />
   <SectionExperience lang={lang} />
+  <SectionStack />
   <Footer lang={lang} />
 </Layout>
