add projects section

--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -28,7 +28,7 @@ const { jobs }: { jobs: string[] } = DATA_EXPERIENCE[lang] || [];
             <div class='w-12 h-12 text-primary-400 dark:text-primary-300'>
               <Check />
             </div>
-            <p class='p highlight text-dark dark:text-white'>{text}</p>
+            <p class='p highlight text-dark dark:text-white text-pretty'>{text}</p>
           </div>
         ))
       }
