--- a/src/components/sections/index.astro
+++ b/src/components/sections/index.astro
@@ -2,4 +2,5 @@
 export { default as SectionHero } from './Hero.astro';
 export { default as SectionExperience } from './Experience.astro';
 export { default as SectionStack } from './Stack.astro';
+export { default as SectionProjects } from './Projects.astro';
 ---
