--- a/src/components/core/index.astro
+++ b/src/components/core/index.astro
@@ -3,4 +3,5 @@ export { default as Typography } from './Typography/index.astro';
 export { default as BackgroundGrid } from './BackgroundGrid/index.astro';
 export { default as Logo } from './Logo.astro';
 export { default as Marquee } from './Marquee.astro';
+export { default as ProjectsList } from './Projects/List.astro';
 ---
