--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,28 +1,35 @@
 ---
-
 import { getLangFromUrl, useTranslations } from '@/i18n/utils';
 import { BackgroundGrid } from '../index.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
-
 ---
 
-<section class='flex items-center justify-center px-5 py-40 bg-dark relative z-10'>
+<section class='flex items-center justify-center px-5 py-14 md:py-40 bg-dark relative z-10 overflow-hidden'>
   <div class='container'>
-    <div class='grid items-center grid-cols-12'>
-      <div class='hero-info relative z-10 col-span-8'>
+    <div class='grid items-center grid-cols-2 sm:grid-cols-12 gap-8'>
+      <div class='hero-info relative z-10 col-span-2 sm:col-span-8'>
         <h1 class='mb-2'>
-          <div class='inline-flex p-2 mb-2 text-5xl font-bold bg-secondary-300 text-dark font-Syne'>
+          <div
+            class='inline-flex p-2 mb-2 text-[clamp(1.6rem,5vw,3.75rem)] leading-[1em] font-bold bg-secondary-400 dark:bg-secondary-300 text-white dark:text-dark'
+          >
             {t('hero.greeting')}
           </div>
-          <div class='font-black text-white text-8xl xl:text-9xl font-Syne'>{t('hero.name')}</div>
+          <div class='font-black text-dark dark:text-white h1 heading mix-blend-difference'>
+            <span class='whitespace-nowrap'>{t('hero.name')}</span>
+            <span class='whitespace-nowrap'>{t('hero.lastname')}</span>
+          </div>
         </h1>
-        <h2 class='text-6xl font-bold font-Syne text-primary-300'>{t('hero.job')}</h2>
+        <h2
+          class='text-[clamp(1.6rem,5vw,3.75rem)] font-bold text-primary-400 dark:text-primary-300'
+        >
+          {t('hero.job')}
+        </h2>
       </div>
       <div class='col-span-4'>
-        <div class="avatar">
-          <div class='flex justify-end w-96 h-96 animate-avatar bg-secondary-300 overflow-clip'>
+        <div class='avatar'>
+          <div class='flex justify-end aspect-square w-full h-full sm:w-96 sm:h-96 translate-x-[20%] sm:translate-x-0 -mb-36 sm:mb-0 animate-avatar bg-secondary-300 overflow-clip'>
             <img
               src='https://png2.cleanpng.com/sh/f21bae3b67cef14517431a7a77c5f35d/L0KzQYm3VMIzN6Jsj5H0aYP2gLBuTfNwdJYyiAJ7b4X2dX7xlfdpbZJpRdx4bnX2PcPwlvVzbJJxfZ9qcnPreba0gf5lepZ8RdHxLUXkdLW8UMJiO5U2TNUALkm8RIiBUcc1OWY3TKYAM0S0SIO8UMIveJ9s/kisspng-cole-sprouse-jughead-jones-riverdale-archie-andrew-oh-5add502a3d14c5.9947817415244534182502.png'
               class='block object-cover object-top w-full h-full'
