--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -12,7 +12,7 @@ import Layout from '@/layouts/Layout.astro';
 const lang = getLangFromUrl(Astro.url);
 ---
 
-<Layout title='Israel Larrondo | Portafolio'>
+<Layout title='Israel Larrondo | Portfolio'>
   <Header />
   <SectionHero />
   <SectionExperience />
