add projects page

--- a/src/components/core/BackgroundGrid/Grid.astro
+++ b/src/components/core/BackgroundGrid/Grid.astro
@@ -1,10 +1,10 @@
 ---
-const lineClasses = 'col-span-2 border-l h-screen dark:border-white/10 border-dark/10';
+const lineClasses = 'col-span-2 border-l h-full dark:border-white/10 border-dark/10';
 ---
 
 <div class={lineClasses}></div>
 <div class={lineClasses}></div>
-<div class={lineClasses}></div>
+<div class={`${lineClasses} border-r md:border-none`}></div>
 <div class={lineClasses}></div>
 <div class={lineClasses}></div>
 <div class={`${lineClasses} border-r`}></div>
