--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -19,7 +19,7 @@ const { jobs }: { jobs: string[] } = DATA_EXPERIENCE[lang] || [];
       type='h3'
       class='dark:text-white max-w-4xl leading-tight text-balance mb-12 md:mb-20'
     >
-      {t('experience.title')}
+      {t('home.experience.title')}
     </Typography>
     <div class='grid grid-cols-2 gap-12 md:gap-20'>
       {
