--- a/src/components/sections/index.astro
+++ b/src/components/sections/index.astro
@@ -3,4 +3,6 @@ export { default as SectionHero } from './Hero.astro';
 export { default as SectionExperience } from './Experience.astro';
 export { default as SectionStack } from './Stack.astro';
 export { default as SectionProjects } from './Projects.astro';
+export { default as SectionAllProjects } from './AllProjects.astro';
+
 ---
