--- a/src/components/core/BackgroundGrid/index.astro
+++ b/src/components/core/BackgroundGrid/index.astro
@@ -1,9 +1,11 @@
 ---
-import Grid from "./Grid.astro";
+import Grid from './Grid.astro';
+
+const { class: className = '' } = Astro.props;
 ---
 
-<div class='absolute bottom-0 left-0 right-0 px-4 pointer-events-none select-none -z-50'>
-  <div class='container grid grid-cols-12 m-auto'>
+<div class=`w-full px-4 pointer-events-none select-none -z-50 ${className}`>
+  <div class='container grid grid-cols-6 md:grid-cols-12 m-auto h-full'>
     <Grid />
   </div>
 </div>
