--- a/src/components/ui/index.astro
+++ b/src/components/ui/index.astro
@@ -1,3 +1,5 @@
 ---
 export { default as Nav } from './Nav.astro';
+export { default as HeaderPage } from './HeaderPage.astro';
+export { default as Breadcrumbs } from './Breadcrumbs.astro';
 ---
