--- a/src/components/sections/Stack.astro
+++ b/src/components/sections/Stack.astro
@@ -1,7 +1,7 @@
 ---
 import { Marquee } from '../index.astro';
 
-import stack from '@/data/stack';
+import stack from '../../data/stack';
 ---
 
 <section class='bg-secondary-300 h-40 flex justify-center relative z-20'>
@@ -20,10 +20,7 @@ import stack from '@/data/stack';
         {
           stack.map(({ label, icon: Icon }) => (
             <div class='group relative flex-1 flex items-center justify-center py-10 text-dark w-32 h-32 xl:w-52'>
-              <div
-                class='xl:px-10 w-full h-full'
-                data-tip={label}
-              >
+              <div class='xl:px-10 w-full h-full' data-tip={label}>
                 {Icon && <Icon className='w-full h-full text-dark' />}
               </div>
               <div class='transition opacity-0 w-max bg-primary-300 text-black text-center text-xs rounded-lg py-2 absolute z-10 group-hover:opacity-100 bottom-2/3 mx-auto px-3 pointer-events-none'>
