--- a/src/components/ui/Breadcrumbs.astro
+++ b/src/components/ui/Breadcrumbs.astro
@@ -1,5 +1,5 @@
 ---
-import type { BreadcrumbsItem } from '@/types';
+import type { BreadcrumbsItem } from '../../types';
 import { Typography } from '../index.astro';
 
 const { breadcrumbs = [] } = Astro.props;
