--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import { getLangFromUrl } from '../i18n/utils';
 import '@fontsource-variable/syne';
 
-import '@/css/styles.css'
+import '../css/styles.css'
 
 interface Props {
   title: string;
