--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,9 @@ import {
   SectionExperience,
   SectionStack,
   SectionProjects,
-} from '@/components/sections/index.astro';
-import { Header, Footer } from '@/components/shared/index.astro';
-import Layout from '@/layouts/Layout.astro';
+} from '../components/sections/index.astro';
+import { Header, Footer } from '../components/shared/index.astro';
+import Layout from '../layouts/Layout.astro';
 
 ---
 
