--- a/src/components/core/Projects/List.astro
+++ b/src/components/core/Projects/List.astro
@@ -1,5 +1,5 @@
 ---
-import type { Project } from '@/types';
+import type { Project } from '../../../types';
 import ProjectCard from './Card.astro';
 
 const { projects } = Astro.props;
