--- a/src/components/sections/AllProjects.astro
+++ b/src/components/sections/AllProjects.astro
@@ -1,19 +1,16 @@
 ---
-import { getLangFromUrl } from '@/i18n/utils';
-import { filterProjects } from '@/utils';
-import type { Langs, ProjectWithLang } from '@/types';
-
-import { ProjectsList } from '@/components/index.astro';
+import { getLangFromUrl } from '../../i18n/utils';
+import type { Langs, ProjectWithLang } from '../../types';
+import { filterProjects } from '../../utils';
+import { ProjectsList } from '../index.astro';
 
 const lang = getLangFromUrl(Astro.url) as Langs;
 
-const projects: ProjectWithLang[] = await Astro.glob('@/data/projects/*.json');
+const projects: ProjectWithLang[] = await Astro.glob('../../data/projects/*.json');
 const projectList = await filterProjects({ projects, lang });
 ---
 
-<section
-  class='flex items-center justify-center px-5 py-14 md:pb-40 '
->
+<section class='flex items-center justify-center px-5 py-14 md:pb-40'>
   <div class='container'>
     <ProjectsList projects={projectList} />
   </div>
