--- a/src/components/ui/Nav.astro
+++ b/src/components/ui/Nav.astro
@@ -1,8 +1,8 @@
 ---
-import { getLangFromUrl, useTranslations, useTranslatedPath } from '@/i18n/utils';
-import { NAV_ITEMS } from '@/constants';
+import { getLangFromUrl, useTranslations, useTranslatedPath } from '../../i18n/utils';
+import { NAV_ITEMS } from '../../constants';
 
-import type { NavItem } from '@/constants/types';
+import type { NavItem } from '../../constants/types';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
