--- a/src/components/core/Projects/Card.astro
+++ b/src/components/core/Projects/Card.astro
@@ -11,7 +11,7 @@ const { category, title, image, name } = project || {};
 ---
 
 <article class='group relative'>
-  <a href={translatePath(`/projects/${name}`)} class='flex aspect-[4/3]'>
+  <a href={`${translatePath(`/projects`)}/${name}`} class='flex aspect-[4/3]'>
     <div
       class='transition absolute z-10 w-12 h-12 p-2 rounded-full bg-white group-hover:bg-primary-300 flex items-center justify-center right-5 top-5 text-dark -rotate-45 group-hover:rotate-0 group-hover:scale-125 group-hover:-translate-y-2 group-hover:translate-x-2'
     >
@@ -23,14 +23,19 @@ const { category, title, image, name } = project || {};
       <Typography class='h5 transition text-white/70 group-hover:text-white'>
         {category}
       </Typography>
-      <Typography type='h3' class='h4 transition text-white group-hover:text-primary-300'>
+      <Typography type='h3' class='h4 transition text-white group-hover:text-primary-300' transition:name="page-title">
         {title}
       </Typography>
     </div>
     {
       image && (
         <div class='absolute inset-0 transition overflow-clip group-hover:scale-105 rounded-4xl'>
-          <img src={image} class='w-full h-full object-cover rounded-4xl' alt={title} />
+          <img
+            src={image.medium}
+            class='w-full h-full object-cover rounded-4xl'
+            alt={title}
+            transition:name='project-image'
+          />
           <div class='transition absolute inset-0 bg-gradient-to-t from-dark to-dark/0 z-10 rounded-4xl translate-y-1/4 group-hover:translate-y-0' />
         </div>
       )
