--- a/src/components/sections/index.astro
+++ b/src/components/sections/index.astro
@@ -4,5 +4,5 @@ export { default as SectionExperience } from './Experience.astro';
 export { default as SectionStack } from './Stack.astro';
 export { default as SectionProjects } from './Projects.astro';
 export { default as SectionAllProjects } from './AllProjects.astro';
-
+export { default as SectionProjectDetail } from './ProjectDetail.astro';
 ---
