--- a/src/components/ui/Breadcrumbs.astro
+++ b/src/components/ui/Breadcrumbs.astro
@@ -3,20 +3,28 @@ import type { BreadcrumbsItem } from '../../types';
 import { Typography } from '../index.astro';
 
 const { breadcrumbs = [] } = Astro.props;
-
+const totalBreads = breadcrumbs.length;
 ---
 
-<Typography class="flex gap-2 text-white">
+<Typography class='flex gap-2 flex-wrap text-white'>
   {
-    breadcrumbs.map(({ name, type, url }: BreadcrumbsItem) => {
+    breadcrumbs.map(({ name, type, url }: BreadcrumbsItem, key: number) => {
       if (type === 'link') {
-        return <a href={url}>{name}</a>;
-      }
-      if (type === 'separator') {
-        return <span>/</span>;
+        const link = <a href={url}>{name}</a>;
+        if (key < totalBreads) {
+          return (
+            <span class='flex gap-2'>
+              <>
+                {link}
+                <span>/</span>
+              </>
+            </span>
+          );
+        }
+        return link;
       }
       if (type === 'current') {
-        return <span class="opacity-60">{name}</span>;
+        return <span class='opacity-60'>{name}</span>;
       }
       return null;
     })
