--- a/src/components/ui/HeaderPage.astro
+++ b/src/components/ui/HeaderPage.astro
@@ -2,14 +2,14 @@
 import { Typography } from '../index.astro';
 import Breadcrumbs from './Breadcrumbs.astro';
 
-const { title = '', breadcrumbs = [] } = Astro.props;
+const { title = '', breadcrumbs = [], class: className } = Astro.props;
 ---
 
-<div class="flex items-center justify-center px-5 pt-12">
+<div class=`flex items-center justify-center px-5 pt-12 ${className}`>
   <div class="container">
     <div class='flex flex-col gap-6'>
       <Breadcrumbs {breadcrumbs} />
-      <Typography type='h1' class='dark:text-white'>{title}</Typography>
+      <Typography type='h1' class='dark:text-white text-balance'  transition:name="page-title">{title}</Typography>
     </div>
   </div>
 </div>
