--- a/src/components/ui/Nav.astro
+++ b/src/components/ui/Nav.astro
@@ -7,19 +7,29 @@ import type { NavItem } from '../../constants/types';
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 const translatePath = useTranslatedPath(lang);
-const currentPath = Astro.url.pathname;
+const { pathname } = Astro.url;
+const currentPath = pathname.replace(`/${lang}`, '');
+
+const isThisPage = (pageUrl = '', currentPath = '', lang = '') => {
+  const currentPage = pageUrl.replace(`/${lang}`, '');
+  const paths = currentPath.replace('/', '').split('/');
+  const [current] = paths;
+  return currentPage === `/${current}`;
+};
 ---
 
 <ul class='flex gap-5'>
   {
-    NAV_ITEMS?.map(({ name, href }: NavItem) => {
+    NAV_ITEMS?.map(({ name, href = '' }: NavItem) => {
       const path = translatePath(href);
+      const isActive = isThisPage(path, currentPath, lang);
+
       return (
         <li>
           <a
             href={path}
             class={`text-xl font-bold text-white font-Syne transition hover:opacity-80 ${
-              currentPath !== path ? 'opacity-60' : ''
+              isActive ? '' : 'opacity-60'
             }`}
           >
             {t(name)}
