--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,9 +1,13 @@
 ---
+import { Image } from 'astro:assets';
 import { getLangFromUrl, useTranslations } from '../../i18n/utils';
 import { BackgroundGrid } from '../index.astro';
 
+import avatar from '../../assets/img/avatar.png';
+
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
+
 ---
 
 <section class='bg-dark relative z-10'>
@@ -33,11 +37,10 @@ const t = useTranslations(lang);
             <div
               class='flex justify-end aspect-square w-full h-full sm:w-96 sm:h-96 translate-x-[20%] sm:translate-x-0 -mb-36 sm:mb-0 animate-avatar bg-secondary-300 overflow-clip'
             >
-              <img
-                src='https://png2.cleanpng.com/sh/f21bae3b67cef14517431a7a77c5f35d/L0KzQYm3VMIzN6Jsj5H0aYP2gLBuTfNwdJYyiAJ7b4X2dX7xlfdpbZJpRdx4bnX2PcPwlvVzbJJxfZ9qcnPreba0gf5lepZ8RdHxLUXkdLW8UMJiO5U2TNUALkm8RIiBUcc1OWY3TKYAM0S0SIO8UMIveJ9s/kisspng-cole-sprouse-jughead-jones-riverdale-archie-andrew-oh-5add502a3d14c5.9947817415244534182502.png'
+              <Image
+                src={avatar}
                 class='block object-cover object-top w-full h-full'
                 alt='Israel Larrondo'
-                loading='lazy'
               />
             </div>
           </div>
