--- a/src/components/core/index.astro
+++ b/src/components/core/index.astro
@@ -4,4 +4,5 @@ export { default as BackgroundGrid } from './BackgroundGrid/index.astro';
 export { default as Logo } from './Logo.astro';
 export { default as Marquee } from './Marquee.astro';
 export { default as ProjectsList } from './Projects/List.astro';
+export { default as LangSelector } from './LangSelector.astro';
 ---
