--- a/src/components/core/Projects/Card.astro
+++ b/src/components/core/Projects/Card.astro
@@ -15,7 +15,7 @@ const { category, title, image, name } = project || {};
 <article class='group relative'>
   <a href={`${translatePath(`/projects`)}/${name}`} class='flex aspect-[4/3]'>
     <div
-      class='transition absolute z-10 w-12 h-12 p-2 rounded-full bg-white group-hover:bg-primary-300 flex items-center justify-center right-5 top-5 text-dark -rotate-45 group-hover:rotate-0 group-hover:scale-125 group-hover:-translate-y-2 group-hover:translate-x-2'
+      class='transition absolute z-10 w-12 h-12 p-2 rounded-full bg-white group-hover:bg-primary-500 group-hover:dark:bg-primary-300 flex items-center justify-center right-5 top-5 text-dark -rotate-45 group-hover:rotate-0 group-hover:scale-125 group-hover:-translate-y-2 group-hover:translate-x-2'
     >
       <GoArrowRight className='w-full h-full ' />
     </div>
@@ -25,7 +25,7 @@ const { category, title, image, name } = project || {};
       <Typography class='h5 transition text-white/70 group-hover:text-white'>
         {category}
       </Typography>
-      <Typography type='h3' class='h4 transition text-white group-hover:text-primary-300' transition:name="page-title">
+      <Typography type='h3' class='h4 transition text-white group-hover:text-primary-500 group-hover:dark:text-primary-300' transition:name="page-title">
         {title}
       </Typography>
     </div>
