--- a/src/components/sections/Stack.astro
+++ b/src/components/sections/Stack.astro
@@ -7,7 +7,7 @@ import badge from '../../assets/img/stack-badge.svg'
 import stack from '../../data/stack';
 ---
 
-<section class='bg-secondary-300 h-40 flex justify-center relative z-20'>
+<section class='bg-secondary-400 dark:bg-secondary-300 h-40 flex justify-center relative z-20'>
   <div class='relative flex items-center w-full'>
     <div class='skills-badge w-52 h-52 absolute -left-28 lg:-left-6 -top-6 -bottom-6 z-10'>
       <!-- <StackBadge /> -->
@@ -26,10 +26,10 @@ import stack from '../../data/stack';
               <div class='xl:px-10 w-full h-full' data-tip={label}>
                 {Icon && <Icon className='w-full h-full text-dark' />}
               </div>
-              <div class='transition opacity-0 w-max bg-primary-300 text-black text-center text-xs rounded-lg py-2 absolute z-10 group-hover:opacity-100 bottom-2/3 mx-auto px-3 pointer-events-none'>
+              <div class='transition opacity-0 w-max bg-primary-500 dark:bg-primary-300 text-black text-center text-xs rounded-lg py-2 absolute z-10 group-hover:opacity-100 bottom-2/3 mx-auto px-3 pointer-events-none'>
                 {label}
                 <svg
-                  class='absolute text-primary-300 h-2 w-full left-0 top-full'
+                  class='absolute text-primary-500 dark:text-primary-300 h-2 w-full left-0 top-full'
                   viewBox='0 0 255 255'
                 >
                   <use href='#tooltip-arrow' />
