--- a/src/components/shared/Header.astro
+++ b/src/components/shared/Header.astro
@@ -12,7 +12,7 @@ const translatePath = useTranslatedPath(lang);
   <div
     class='container flex items-center justify-between gap-4 p-3 px-8 m-auto transition rounded-main backdrop-blur-md bg-white/60 dark:bg-dark/60'
   >
-    <a href={translatePath('/')} class='text-white' title='Arsi Logo'>
+    <a href={translatePath('/')} class='text-dark dark:text-white' title='Arsi Logo'>
       <Logo />
     </a>
     <div class='flex items-center gap-8 ml-auto'>
