--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const lang = getLangFromUrl(Astro.url);
 ---
 
 <!doctype html>
-<html lang={lang} class='scroll-smooth'>
+<html lang={lang}>
   <head>
     <meta charset='UTF-8' />
     <meta name='description' content='Astro description' />
