--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,20 +1,24 @@
 ---
-import { ViewTransitions } from 'astro:transitions';
 import { getLangFromUrl } from '../i18n/utils';
 import '@fontsource-variable/syne';
 
-import '../css/styles.css'
+import '../css/styles.css';
+import Header from '../components/shared/Header.astro';
+import Footer from '../components/shared/Footer.astro';
+import { ViewTransitions } from 'astro:transitions';
 
 interface Props {
   title: string;
 }
 
-const { title } = Astro.props;
+const { props } = Astro;
+
+const { title } = props;
 const lang = getLangFromUrl(Astro.url);
 ---
 
 <!doctype html>
-<html lang={lang}>
+<html lang={lang} class='dark'>
   <head>
     <meta charset='UTF-8' />
     <meta name='description' content='Astro description' />
@@ -22,11 +26,12 @@ const lang = getLangFromUrl(Astro.url);
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
+    <ViewTransitions />
   </head>
 
   <body class='bg-white dark:bg-dark'>
+    <Header />
     <slot />
+    <Footer />
   </body>
-  <ViewTransitions />
 </html>
-
