--- a/src/components/sections/index.astro
+++ b/src/components/sections/index.astro
@@ -1,8 +1,9 @@
 ---
-export { default as SectionHero } from './Hero.astro';
-export { default as SectionExperience } from './Experience.astro';
-export { default as SectionStack } from './Stack.astro';
-export { default as SectionProjects } from './Projects.astro';
+export { default as SectionAbout } from './About.astro';
 export { default as SectionAllProjects } from './AllProjects.astro';
+export { default as SectionExperience } from './Experience.astro';
+export { default as SectionHero } from './Hero.astro';
 export { default as SectionProjectDetail } from './ProjectDetail.astro';
+export { default as SectionProjects } from './Projects.astro';
+export { default as SectionStack } from './Stack.astro';
 ---
