--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -4,12 +4,14 @@ import {
   SectionExperience,
   SectionStack,
   SectionProjects,
+  SectionAbout,
 } from '../../components/sections/index.astro';
 import Layout from '../../layouts/Layout.astro';
 ---
 
 <Layout title='Israel Larrondo | Portfolio'>
   <SectionHero />
+  <SectionAbout />
   <SectionExperience />
   <SectionStack />
   <SectionProjects />
