--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,18 @@
 ---
-import { ViewTransitions } from 'astro:transitions';
 import {
   SectionHero,
   SectionExperience,
   SectionStack,
   SectionProjects,
+SectionAbout,
 } from '../components/sections/index.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title='Israel Larrondo | Portafolio'>
   <SectionHero />
+  <SectionAbout />
   <SectionExperience />
   <SectionStack />
   <SectionProjects />
-  <ViewTransitions  />
 </Layout>
