--- a/src/css/mark-text.css
+++ b/src/css/mark-text.css
@@ -3,11 +3,11 @@
   animation: highlight steps(1) both;
   animation-timeline: view();
   animation-range: entry 170% cover 40%;
-  @apply text-white;
+  @apply text-dark dark:text-white;
 }
 
 .mark-text span {
-  background: linear-gradient(90deg, theme('colors.primary.300') 50%, theme('colors.dark') 50%) 110%
+  background: linear-gradient(90deg, theme('colors.primary.300') 50%, transparent 50%) 110%
     0 / 200% 100% no-repeat;
   background-position: calc((1 - var(--highlighted)) * 110%) 0;
   transition: background-position 1s, color 1s;
