fix component property name

--- a/src/content/sections/index.astro
+++ b/src/content/sections/index.astro
@@ -4,7 +4,7 @@ import AboutEn from './about-en.astro';
 
 type SectionContent = {
   [key: string]: {
-    About: React.ComponentType<any>;
+    about: React.ComponentType<any>;
   };
 };
 
